--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
+        <input type="text">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
         <script src="./index-module-7.js"></script>
     </body>
 </html>
