--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <input type="text">
+        <!-- <input type="text"> -->
+
+        <button class="fav">Обране</button>
+        <button class="basket">Корзина</button>
+        <form action="" name="form">
+            <input type="text" name="inp">
+            <button name="butt">Searsh</button>
+        </form>
+
+        <div class="wrapper"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
-        <script src="./index-module-7.js"></script>
+        <script src="./index-module-8.js"></script>
     </body>
 </html>
