--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
     <body>
         <!-- <input type="text"> -->
 
-        <button class="fav">Обране</button>
-        <button class="basket">Корзина</button>
-        <form action="" name="form">
-            <input type="text" name="inp">
-            <button name="butt">Searsh</button>
-        </form>
+
+        <!-- // add-hw-market (index-module-8.js) //  -->
+
+        <header>
+            <div class="btnSet">
+                <button class="goods">Усі товари</button>
+                <button class="fav">Обране</button>
+                <button class="basket">Корзина</button>
+            </div>
+            <form class="searchForm" action="">
+                <input type="text" name="inp">
+                <button name="butt">Пошук</button>
+            </form>
+        </header>
 
         <div class="wrapper"></div>
+
+        <!-- // add-hw-market (index-module-8.js) //  -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
         <script src="./index-module-8.js"></script>
