--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
         <header>
             <div class="btnSet">
-                <button class="goods">Усі товари</button>
-                <button class="fav">Обране</button>
-                <button class="basket">Корзина</button>
+                <button class="goods">&#127978 Усі товари</button>
+                <button class="fav">&#11088 Обране</button>
+                <button class="basket">&#128722 Корзина</button>
             </div>
             <form class="searchForm" action="">
                 <input type="text" name="inp">
-                <button name="butt">Пошук</button>
+                <button name="butt">&#128269</button>
             </form>
         </header>
 
