--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <button name="butt">🔍</button>
             </form>
         </header>
-
-        <div class="wrapper"></div>
+        <div class="content"></div>
 
         <!-- // add-hw-market (index-module-8.js) //  -->
 
